# uv-demo

./: .pre-commit-config.yaml  .safety-project.ini  Dockerfile  LICENSE  README.md  Taskfile.yml  compose.yml  pyproject.toml  run.bat  run.sh
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
.github/: copilot-instructions.md  dependabot.yml
.github/workflows/: cd-docker.yaml  cd-python.yml  ci-docker.yaml  ci-python.yml  codeql.yml  scan-codeql.yml  scan-safety.yml  scan-zizmor.yml
docs/: command-cheatsheet.md  demo-quickstart.md  installation.md  setup-guide.md  troubleshooting.md
notebooks/: demo.ipynb
src/uv_demo/: __init__.py
tests/: __init__.py  conftest.py
tests/uv_demo/: __init__.py  test_main.py
